# VeriTalent

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEVOPS_QUICKSTART.md  Dockerfile  README.md  TAPI outputs templates & samples.txt  docker-compose.yml  package-lock.json  package.json  prd.txt  sso-test.txt  veriTalentProductDocument.md  veritalentWebcopy.md
.github/: copilot-instructions.md
.history/: README_20251231164754.md  README_20251231164932.md
ai/: .dockerignore  .env.docker  .env.example  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  DEMO_GUIDE.md  Dockerfile  PRODUCTION_SUMMARY.md  QUICK_START.md  README.md  TESTING_REPORT.md  demo_script.py  pyproject.toml  run_demo.fish  start.fish
ai/data/: skills_taxonomy.json
ai/src/: __init__.py  config.py  main.py
ai/src/api/: dependencies.py
ai/src/api/routes/: __init__.py  backend_integration.py  competency.py  cover_letter.py  cv.py  cv_parser.py  fit_scoring.py  insights.py  job.py  lpi_agent.py  profile.py  screening.py
ai/src/core/: __init__.py  ai_operations.py
ai/src/core/competency/: __init__.py  signal_generator.py
ai/src/core/cv_parser/: __init__.py  extractors.py  normalizers.py  parser.py
ai/src/core/fit_scoring/: __init__.py  scorer.py
ai/src/core/insights/: __init__.py  career_recommender.py
ai/src/core/lpi/: __init__.py  report_generator.py  summarizer.py
ai/src/models/: ai_requests.py  backend_integration.py  competency.py  cv.py  fit_score.py  lpi.py  talent.py
ai/src/services/: cosmos_service.py  embedding_service.py  file_downloader.py  llm_service.py  mongo_service.py
ai/src/utils/: document_loader.py  text_cleaner.py
ai/tests/: test_all_endpoints.py  test_competency.py  test_cv_parser.py  test_cv_parsing_edge_cases.py  test_fit_scoring.py  test_lpi.py  test_production_scenarios.py
app/: globals.css  layout.tsx  page.tsx
components/: PublicVeriTalentCard.tsx
docs/: additional_features_implemented.md  api_tokens_backend_spec.md  backend_api_endpoints_dtos.md  backend_api_endpoints_implemented.md  backend_api_endpoints_missing.md  backend_dev_feedback_fixes.md  backend_oauth_fix.md  cv_upload_components_analysis.md  cv_upload_feature.md  cv_upload_quick_ref.md  google_oauth_integration.md  implementation_gaps.md  registration_onboarding_contract.md  role_switching_onboarding.md  screening-endpoints-todos.md  unnecessary_implementations.md  user_type_explained.md
lib/: appInitializer.tsx  utils.ts
types/: create_job.ts  create_user.ts  (+4 more)
(+252 files in other folders)
